--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"https://room-bookingapp-api.onrender.com"
+  },"proxy":"https://room-bookingapp-api.onrender.com/api"
 }
