--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8800/api"
+  "proxy":"https://room-bookingapp-api.onrender.com/"
 }
