--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://room-bookingapp-api.onrender.com/"
+  "proxy":"https://room-bookingapp-api.onrender.com/api"
 }
